--- a/labb6/index.html
+++ b/labb6/index.html
@@ -26,10 +26,10 @@
     <ul class="list">
     </ul>
     <table>
-        <th>
-            <td>Imie</td>
-            <td>Nazwisko</td>
-        </th>
+        <tr>
+            <th>Imie</th>
+            <th>Nazwisko</th>
+        </tr>
     </table>
 </body>
 </html>
